<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.utt.potholes.ProvidedActivity"
    tools:showIn="@layout/activity_provided"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editName"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editEmail"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:"
                android:layout_margin="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:weightSum="10"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11dp"
                        android:text="Latitude: "
                        android:textColor="@color/blue_grey_800"/>
                    <TextView
                        android:id="@+id/txtLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:text="Loading..."
                        android:textColor="@color/blue_grey_500"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Longitude: "
                        android:textColor="@color/blue_grey_800"
                        android:textSize="11dp"/>
                    <TextView
                        android:id="@+id/txtLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:text="Loading..."
                        android:textColor="@color/blue_grey_500"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/FilePath"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editFilePath"
                            android:enabled="false"
                            style="@style/modifiedEditText"
                            android:hint="@string/filePath"
                            android:maxWidth="200dp"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/imgChooseFile"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_attach_file"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"/>

                    <ImageButton
                        android:id="@+id/imgOpenCamera"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_camera_blue"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutImage"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imClearImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_clear"/>

                    <ImageView
                        android:id="@+id/imgResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/enquiry_bk"
                        android:maxHeight="100dp"/>

                </LinearLayout>

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editNote"
                    style="@style/modifiedEditText"
                    android:hint="@string/Note"
                    android:inputType="textMultiLine"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/centre_button"
                android:text="@string/send"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
